# libdlog

./: LICENSE  Makefile.am  README.md  Readme  TODO.txt  coding-notes.txt  configure.ac  dlog.rc  doxyconfig  notes.txt
doc/: make-patch.txt  xfer.conf.oldformat
doc/figs/: plot-cmds-size  plot-cmds-speed  size.data  size.ps  size.tcl  speed.data  speed.ps  speed.tcl
doc/oldfiles/: lerma-notes.txt  libdlog.patch
example-app/openssh-6.0/: Makefile.diff  Makefile.patch  Readme-patch.txt  scp.diff  scp.patch  sftp_server.patch
src/: Makefile.am  externaldns.c  libdlog.h  md5.h  md5c.c  private.c  publicapi.c  readconf.c
test/: Makefile.am  dlog1.rc  dlog2.rc  dlog3.rc  dlog4.rc  dlog5.rc  dlogtest.c  maMakefile
